# SecureCRDTSpec

./: README.md  SecureCRDT.cabal
Control/Functor/: Zip.hs
Secure/: CRDT.hs
Secure/CRDT/: Class.hs  Client.hs  Examples.hs  IO.hs  MPC.hs  Utils.hs  World.hs
Secure/CRDT/Examples/: BC.hs  GC1.hs  GC2.hs  GSet.hs  LWW.hs  MAX.hs  MVR.hs  OGSet.hs  PNC.hs  RGA.hs  SGSet.hs
Secure/CRDT/World/: Ideal.hs  Real.hs
